--- a/assignment8.ipynb
+++ b/assignment8.ipynb
@@ -43,9 +43,7 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "from assignment7 import KozenyCarmen"
+    "import numpy as np"
    ]
   },
   {
